improved photo enlarge cababilities

--- a/documentation/code-generators/m2m-codegenerator.html
+++ b/documentation/code-generators/m2m-codegenerator.html
@@ -486,7 +486,7 @@
 <p><strong>Proceed as follows</strong></p>
 
 <ol>
-  <li>In the <strong>Function Block Models</strong> browser, select the function block project you want to generate code for.</li>
+  <li>In the <strong>Information Models</strong> browser, select the function block project you want to generate code for.</li>
   <li>Right-click to open the context menu and click <strong>Generate Code &gt; Bosch M2M Model Generator</strong>.<br />
 <img src="../../img/documentation/m2m_tc_generate_code_function_block_model_1.png" alt="Generating code" /><br />
 The following is generated and Eclipse switches to the Java perspective:
