--- a/documentation/overview/introduction.html
+++ b/documentation/overview/introduction.html
@@ -497,6 +497,9 @@ Vorto provides an Eclipse project wizard to create a function block model projec
 <p><strong>Information model wizard</strong><br />
 Information models represent the capabilities of a particular type of device in its entirety. An information model contains one or more function blocks. Vorto provides an UI wizard to create an information model project and all required resources.</p>
 
+<p><strong>Mapping model wizard</strong><br />
+Vorto provides an Eclipse project wizard to create a mapping model from existing Datatype, Function block, or Information models.</p>
+
 <p><strong>DSL editors</strong><br />
 The new Domain-specific Language (DSL) is a simple way to define and read datatype models, function block models and information models without the need to understand XML, XSD or even Java. On-the-fly auto-completion and validation lets you create the named models even faster than ever.</p>
 
@@ -512,13 +515,14 @@ The new Domain-specific Language (DSL) is a simple way to define and read dataty
 
 <p><img src="../../img/documentation/m2m_tc_information_model_dsl_editor.png" alt="Information model DSL editor" /></p>
 
+<p>Mapping model DSL editor:</p>
+
+<p>Vorto provides Mapping DSL editor for user to create customized mapping that map a vorto model to another platform model.</p>
+
 <p><strong>Vorto perspective</strong><br />
 The Vorto perspective as a new Eclipse perspective simplifies the view and, thus, the work with the more abstract models.</p>
 
 <p><img src="../../img/documentation/m2m_tc_vorto_perspective.png" alt="Vorto Perspective" /></p>
-
-<p><strong>Information model mapping</strong><br />
-Vorto provides Mapping DSL editor for user to create customized mapping that map a vorto information model to another platform model.</p>
 
 <p><strong>Example code generators</strong><br />
 Vorto provides several code generators, so that the user can generate code based on the select information model. Vorto also provides a code generator extension point, so that the user can create his own code generator.</p>
