--- a/documentation/editors/functionblock.html
+++ b/documentation/editors/functionblock.html
@@ -534,35 +534,31 @@ The function block model DSL source file (with suffix .fbmodel) is generated and
 
 <pre><code>namespace com.mycompany.fb
 version 1.0.0
+displayname "Lamp"
+description "A lamp makes the environment bright"
+category demo
+
 functionblock Lamp {
-  displayname "Lamp"
-  description "A lamp makes the environment bright"
-  category demo
+	configuration {
+		mandatory blinking as boolean "if the lamp is currently blinking or not"
+		mandatory on as boolean "if the lamp is currently switched on"
+		mandatory powerConsumption as int "the amount of power the lamp is consuming"
+	}
 
-  configuration{
-    mandatory blinking as boolean "if the lamp is currently blinking or not"
-    mandatory on as boolean "if the lamp is currently switched on"
-    mandatory powerConsumption as int
-      "the amount of power the lamp is consuming"  
-  }
+	fault {
+		mandatory bulbDefect as boolean "true if the light bulb of the lamp is defect"
+	}
 
-  fault{
-    mandatory bulbDefect as boolean
-      "true if the light bulb of the lamp is defect"
-  }
-
-  operations{
-    blink(blinkType as int) "sets the blinking type for the lamp"
-    getPowerConsumption() returns int
-      "gets the amount of power being consumed by the lamp"
-    isOn() returns boolean "checks if the lamp is switched on"
-    off() "turns the lamp off"
-    on() "turns the lamp on"
-    stopBlinking() "stops the blinking of the lamp"
-    toggle() "switches the lamp on or off"
-    toggleWithDelay(delayInSeconds as int)
-      "switches the lamp on or off with a delay of the specified seconds"
-  }
+	operations {
+		blink(blinkType as int) "sets the blinking type for the lamp"
+		getPowerConsumption() returns int "gets the amount of power being consumed by the lamp"
+		isOn() returns boolean "checks if the lamp is switched on"
+		off() "turns the lamp off"
+		on() "turns the lamp on"
+		stopBlinking() "stops the blinking of the lamp"
+		toggle() "switches the lamp on or off"
+		toggleWithDelay(delayInSeconds as int) "switches the lamp on or off with a delay of the specified seconds"
+	}	
 }
 </code></pre>
 
