--- a/documentation/installation/installation.html
+++ b/documentation/installation/installation.html
@@ -15,7 +15,7 @@
 
 
  
-  <title>Installing the Plugins</title>
+  <title>Eclipse Vorto - Open Source IoT tool for device abstractions</title>
 
   <!--Stylesheets-->
   <!-- Bootstrap 3.3.1 -->
@@ -112,6 +112,7 @@
 				</div>
 				<!-- /.navbar-collapse -->
 		</div>
+		<a href="https://github.com/eclipse/vorto"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 		<!-- /.container -->
 </nav>
 
@@ -485,7 +486,7 @@
 
 <h2 id="getting-the-vorto-plug-ins">Getting the Vorto Plug-ins</h2>
 
-<p>The Vorto plug-ins are available on the Eclipse update site server. The URL to the server is <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/</a>. You must add this repository to your IDE or, alternatively, import the Vorto plug-in zip archive to get the Vorto plug-ins.</p>
+<p>The Vorto plug-ins are available on the Eclipse update site server. The URL to the server is <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/</a>. You must add this repository to your IDE or, alternatively, import the Vorto plug-in zip archive to get the Vorto plug-ins.</p>
 
 <p><strong>Proceed as follows</strong></p>
 
@@ -500,7 +501,7 @@ Otherwise proceed with the next step.</li>
   <li>Add the <em>Vorto plug-ins repository</em> URL:<br />
 a. Click the <strong>Add…</strong> button beside the <strong>Work with</strong> field. The <strong>Add Repository</strong> dialog opens.<br />
 b. Enter a Name (optionally, e.g., <em>Vorto</em>).<br />
-c. Enter the <em>Vorto plug-ins repository</em> URL <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/</a> into the <strong>Location</strong> field.<br />
+c. Enter the <em>Vorto plug-ins repository</em> URL <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M2</a> into the <strong>Location</strong> field.<br />
 d. Click <strong>OK</strong>.</li>
 </ol>
 
