--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
  
-  <title>Eclipse Vorto</title>
+  <title>Eclipse Vorto - Open Source IoT tool for device abstractions</title>
 
   <!--Stylesheets-->
   <!-- Bootstrap 3.3.1 -->
@@ -146,6 +146,7 @@ $(document).ready(function(){
 				</div>
 				<!-- /.navbar-collapse -->
 		</div>
+		<a href="https://github.com/eclipse/vorto"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 		<!-- /.container -->
 </nav>
 
@@ -924,7 +925,7 @@ The key points are:</p>
       <h2>Projects/Products using Vorto</h2>
 </div>
 <div class="col-md-3 page-header pull-right">
-          <a href="https://github.com/eclipse/vorto/tree/development/docs/ctyprojects.md"><h2>Add your project!</h2></a>
+          <a href="https://github.com/eclipse/vorto/edit/development/docs/ctyprojects.md"><h2>Add your project!</h2></a>
         </div>
       
         
@@ -1080,6 +1081,7 @@ It leverages the Vorto interface definition language for the IoT to manage heter
 </div>
 </div>
 </div>
+
         <!--<div class="box">
 <h2 class="box-headline" id="header10">Existing Contributors</h2>
 <hr>
