--- a/documentation/code-generators/m2m-codegenerator.html
+++ b/documentation/code-generators/m2m-codegenerator.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-  <meta name="description" content="Eclipse Vorto - IoT Toolset for standardized device descriptions">
+  <meta name="description" content="IoT Toolset that lets you describe the characteristics of real world devices, share them in a central repository and generate code for different platforms">
   <meta name="author" content="">
   <!--base to have relative path for offline navigation -->
 
@@ -15,7 +15,7 @@
 
 
  
-  <title>Eclipse Vorto - Open Source IoT tool for device abstractions</title>
+  <title>Eclipse Vorto - IoT Toolset for standardized device descriptions</title>
 
   <!--Stylesheets-->
   <!-- Bootstrap 3.3.1 -->
